@@ -5,7 +5,7 @@ AC_PREREQ(2.57)
 
 dnl ############# Initialization
 
-AC_INIT([madjack], [0.3], [njh@ecs.soton.ac.uk])
+AC_INIT([madjack], [0.4], [njh@ecs.soton.ac.uk])
 
 AC_CONFIG_SRCDIR( madjack.c )
 AC_CANONICAL_SYSTEM
