@@ -52,7 +52,6 @@ char * root_directory = "";			// Root directory (files loaded relative to this)
 float position = 0.0;				// Position in track (seconds)
 float duration = 0.0;				// Duration of track (seconds)
 float cuepoint = 0.0;				// Cue point of track (seconds)
-int bitrate = 0;					// The bitrate of the MPEG Audio (in kbps)
 int verbose = 0;					// Verbose flag (display more information)
 int quiet = 0;						// Quiet flag (stay silent unless error)
 float rb_duration = DEFAULT_RB_LEN;	// Duration of ring buffer (in seconds)
