@@ -68,7 +68,6 @@ extern int quiet;
 extern float position;
 extern float duration;
 extern float cuepoint;
-extern int bitrate;
 
 
 // ------- Prototypes -------
